--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/components/main.jsx"></script>
+    <script type="module" src="/src/javascript/index.js"></script>
   </body>
 </html>
